Bug 426560 - Musicbrainz search only allow exact matches
Summary: Musicbrainz search only allow exact matches
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3.3
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-15 12:51 UTC by cisfrullo
Modified: 2020-09-17 00:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cisfrullo 2020-09-15 12:51:10 UTC
SUMMARY
When using the musicbrainz search to add an entry in for a music collection all the searches are sent to the server in quotes meaning that an exact match is searched.
This is fine for title and artist search if you remember exactly waht to search for but it will produce no results for a partial key.
The Keyword searh mode also send the query in quotes so is not possible to mix artist and album name in the search.
This is just a minor inconvinien in the search but it may be easly solved by removin the quotes for the search at least for the Keyword search mode.
If instead this is the intended behavior it may be good to allow the raw search that seems to be supported in src/fetch/musicbrainzfetcher.cpp but not allowed in src/fetch/musicbrainzfetcher.h

P.S. Thanks for tellico!


STEPS TO REPRODUCE
1. Open a music collection
2. Add new entry from internet
3. select keyword search 
4. search for "lily allen - no shame"

OBSERVED RESULT
No results are returned.

EXPECTED RESULT
Some result are found.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 5.68.0
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Robby Stephenson 2020-09-17 00:41:01 UTC
Git commit 39c7c1d1d30cc1e5d96e37ccf79138fca10ac2ca by Robby Stephenson.
Committed on 17/09/2020 at 00:40.
Pushed by rstephenson into branch 'master'.

RUn a general query for Keyword searches in MusicBrainz

Rather than limiting to release, artist, or label, just run a general
query, without quotes, to allow the most user-flexibility.
FIXED-IN: 3.4

M  +4    -0    ChangeLog
M  +1    -6    src/fetch/musicbrainzfetcher.cpp
M  +1    -1    src/fetch/musicbrainzfetcher.h
M  +35   -0    src/tests/musicbrainzfetchertest.cpp
M  +2    -0    src/tests/musicbrainzfetchertest.h

https://invent.kde.org/office/tellico/commit/39c7c1d1d30cc1e5d96e37ccf79138fca10ac2ca