RUn a general query for Keyword searches in MusicBrainz

Rather than limiting to release, artist, or label, just run a general
query, without quotes, to allow the most user-flexibility.

BUG: 426560
FIXED-IN: 3.4