src/tests/musicbrainzfetchertest.cpp
@@ -100,6 +100,25 @@ void MusicBrainzFetcherTest::testKeyword() {
   QVERIFY(!entry->field(QStringLiteral("cover")).contains(QLatin1Char('/')));
 }
 
+void MusicBrainzFetcherTest::testBug426560() {
+  // the total test case ends up exceeding the throttle limit so pause for a second
+  QTest::qWait(1000);
+
+  Tellico::Fetch::FetchRequest request(Tellico::Data::Collection::Album, Tellico::Fetch::Keyword,
+                                       QStringLiteral("lily allen - no shame"));
+  Tellico::Fetch::Fetcher::Ptr fetcher(new Tellico::Fetch::MusicBrainzFetcher(this));
+
+  static_cast<Tellico::Fetch::MusicBrainzFetcher*>(fetcher.data())->setLimit(1);
+  Tellico::Data::EntryList results = DO_FETCH1(fetcher, request, 1);
+
+  QCOMPARE(results.size(), 1);
+
+  Tellico::Data::EntryPtr entry = results.at(0);
+  QVERIFY(entry);
+  QCOMPARE(entry->title(), QStringLiteral("No Shame"));
+  QCOMPARE(entry->field(QStringLiteral("artist")), QStringLiteral("Lily Allen"));
+}
+
 void MusicBrainzFetcherTest::testPerson() {
   const QString artist(QStringLiteral("artist"));
   Tellico::Fetch::FetchRequest request(Tellico::Data::Collection::Album, Tellico::Fetch::Person,
@@ -115,6 +134,22 @@ void MusicBrainzFetcherTest::testPerson() {
   Tellico::Data::EntryPtr entry = results.at(0);
   QVERIFY(entry);
   QCOMPARE(entry->field(artist), m_fieldValues.value(artist));
+}
+
+void MusicBrainzFetcherTest::testACDC() {
+  Tellico::Fetch::FetchRequest request(Tellico::Data::Collection::Album, Tellico::Fetch::Person,
+                                       QStringLiteral("AC/DC"));
+  Tellico::Fetch::Fetcher::Ptr fetcher(new Tellico::Fetch::MusicBrainzFetcher(this));
+
+  // TODO: Fetcher::setLimit should be virtual in Fetcher class
+  static_cast<Tellico::Fetch::MusicBrainzFetcher*>(fetcher.data())->setLimit(1);
+  Tellico::Data::EntryList results = DO_FETCH1(fetcher, request, 1);
+
+  QVERIFY(results.size() > 0);
+
+  Tellico::Data::EntryPtr entry = results.at(0);
+  QVERIFY(entry);
+  QCOMPARE(entry->field(QStringLiteral("artist")), QStringLiteral("AC/DC"));
 }
 
 // test grabbing cover art from coverartarchive.org
